--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-dotenv": "^3.4.9",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-vector-icons": "^10.0.3"
